<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cvImage"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvxl"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@+id/cvImage"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:letterSpacing="-0.02"
        android:text="@string/x1"
        android:textColor="@color/colorText"
        android:textSize="13sp"
        android:background="@drawable/custom_image_action_layout"

        />

    <TextView
        android:id="@+id/tv12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvxl"
        android:layout_marginStart="8dp"
        android:layout_toRightOf="@+id/tvxl"
        android:gravity="center"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="-3sp"
        android:text="@string/_12"
        android:textColor="@color/colorText"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvX2"
        android:layout_width="25dp"
        android:layout_height="21dp"
        android:layout_alignBaseline="@+id/tv12"
        android:layout_marginStart="19dp"
        android:layout_toRightOf="@+id/tv12"
        android:gravity="center"
        android:letterSpacing="-0.02"
        android:text="@string/x2"
        android:textColor="@color/colorText"
        android:textSize="13sp"
        android:background="@drawable/custom_image_action_layout"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvX2"
        android:layout_marginStart="4dp"
        android:layout_toRightOf="@+id/tvX2"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="-3sp"
        android:text="@string/_4"
        android:textColor="@color/colorText"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvX3"
        android:layout_width="25dp"
        android:layout_height="21dp"
        android:layout_alignBaseline="@+id/tv4"
        android:layout_marginStart="16dp"
        android:layout_toRightOf="@+id/tv4"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.02"
        android:text="X3"
        android:textColor="@color/colorText"
        android:textSize="13sp"
        android:background="@drawable/custom_image_action_layout"/>

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvX3"
        android:layout_marginStart="4dp"
        android:layout_toRightOf="@+id/tvX3"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="-3sp"
        android:text="@string/_4"
        android:textColor="@color/colorText"
        android:textSize="13sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvTimer"
        android:layout_width="74dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cvImage"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@color/colorTimer"
        app:cardCornerRadius="13dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:id="@+id/rlTimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--<ImageView-->
                <!--android:id="@+id/ivTimer"-->
                <!--android:layout_width="19dp"-->
                <!--android:layout_height="19dp"-->
                <!--android:layout_margin="3dp"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/timer" />-->
            <com.twoam.dimpro.Utilities.widget.CircleCountDownView
                android:id="@+id/ivTimer"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="3dp"
               />
            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/ivTimer"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/ivTimer"
                android:gravity="center"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="-3sp"
                android:text="@string/_00_30"
                android:textColor="@color/colorOrange"
                android:textSize="13sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>

