<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.twoam.dimpro.View.TitleActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.02"
        android:text="@string/title"
        android:textColor="@color/colorAccent"
        android:textSize="23sp" />
    <Button
        android:id="@+id/btnText1"
        android:layout_width="76dp"
        android:layout_height="31dp"
        android:layout_alignStart="@+id/tvTitle"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="19dp"
        android:background="@drawable/custom_button_gray"
        android:drawableLeft="@drawable/pin"
        android:drawablePadding="4.5dp"
        android:gravity="center|left"
        android:letterSpacing="-0.02"
        android:text="@string/text1"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="13sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="43dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            android:clickable="true"
            />

    <TextView
        android:id="@+id/tvAlert"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_below="@+id/btnText1"
        android:layout_marginTop="25dp"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:letterSpacing="-0.02"
        android:text="Alert"
        android:textColor="@color/colorWhite"
        android:textSize="13sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvAlert"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical" />

    <Button
        android:id="@+id/btnZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:gravity="center"
        android:letterSpacing="-0.02"
        android:text="@string/button_z"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="17sp" />
</RelativeLayout>
