<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.twoam.dimpro.View.TitleYActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cvParent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardElevation="1dp"
        app:cardBackgroundColor="@color/colorBack"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="14dp"
                android:clickable="true"
                app:srcCompat="@drawable/ic_back"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="95.5dp"
                android:layout_marginRight="128.5dp"
                android:letterSpacing="-0.01"
                android:layout_marginTop="12dp"
                android:text="@string/title_y"
                android:textAllCaps="false"
                android:textColor="@color/colorHeader"
                android:textSize="17sp"
                android:clickable="true"/>


            <TextView
                android:id="@+id/tvActK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="14dp"
                android:clickable="true"
                android:fontFamily="CircularStd-Book"
                android:gravity="center"
                android:text="@string/act_k"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvParent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical" />

    <Button
        android:id="@+id/btnZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:gravity="center"
        android:letterSpacing="-0.02"
        android:text="@string/button_z"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="17sp" />
</RelativeLayout>
